hphp/hack/test/typecheck/new_inference/nothing/hint.php.legacy.exp
File "hint.php", line 6, characters 12-18:
Unbound name: nothing (an object type) (Naming[2049])
File "hint.php", line 7, characters 18-24:
Unbound name: nothing (an object type) (Naming[2049])
File "hint.php", line 8, characters 21-27:
Unbound name: nothing (an object type) (Naming[2049])
File "hint.php", line 8, characters 34-40:
Unbound name: nothing (an object type) (Naming[2049])
File "hint.php", line 4, characters 23-29:
Unbound name: nothing (an object type) (Naming[2049])
File "hint.php", line 5, characters 18-24:
Unbound name: nothing (an object type) (Naming[2049])
